# "asi_opengl" crate - Licensed under the MIT LICENSE
#  * Copyright (c) 2018  Jeron A. Lau <jeron.lau@plopgrizzly.com>
#                             _        _
#                            /@\——————/@\
# .———  .                   |   o    o   |     .————      .            .
# |   | |  .———   .———   .——.     []     .——.  |      .——    ———: ———: | .   .
# |   | |  |   |  |   |  \   \   <##>   /   /  |      |   |    /    /  | |   |
# |———  |  |   |  |   |   |   ¯        ¯   |   |   -- |   |   /    /   |  \ /
# |     |  |   |  |———    |                |   |    | |   |  /    /    |   |
# |     |   ———   |       |                |    ————  |   | :——— :———  |   |
#                 |        \              /                              __/
#                           ¯————————————¯

[package]
name = "asi_opengl"
version = "0.3.4"
authors = [
	"Jeron A. Lau <jeron.lau@plopgrizzly.com>"
]

license = "MIT"
documentation = "https://docs.rs/asi_opengl"
homepage = "http://plopgrizzly.com/asi_opengl"
repository = "https://github.com/plopgrizzly/asi_opengl"

readme = "readme.md"
description = "Rust safe bindings for OpenGL / OpenGLES."
keywords = ["opengl", "opengl-es"]
categories = ["rendering::graphics-api", "hardware-support",
	"api-bindings", "rendering", "external-ffi-bindings"]

exclude = [
	"examples/*", "CODE_OF_CONDUCT.md", "CONTRIBUTING.md", ".gitignore",
	"_config.yml", "ISSUE_TEMPLATE.md", "icon.png", "icon.ico"
]

[dependencies]
dl_api = "0.1"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"
