# "asi_opengl" - Aldaron's System Interface - OpenGL
#                             _        _
#                            /@\——————/@\
# .———  .                   |   o    o   |     .————      .            .
# |   | |  .———   .———   .——.     []     .——.  |      .——    ———: ———: | .   .
# |   | |  |   |  |   |  \   \   <##>   /   /  |      |   |    /    /  | |   |
# |———  |  |   |  |   |   |   ¯        ¯   |   |   -- |   |   /    /   |  \ /
# |     |  |   |  |———    |                |   |    | |   |  /    /    |   |
# |     |   ———   |       |                |    ————  |   | :——— :———  |   |
#                 |        \              /                              __/
#                           ¯————————————¯
#
# Copyright Jeron A. Lau 2018.
# Distributed under the Boost Software License, Version 1.0.
# (See accompanying file LICENSE_1_0.txt or copy at
# https://www.boost.org/LICENSE_1_0.txt)

[package]
name = "asi_opengl"
version = "0.5.0"
authors = [
	"Jeron A. Lau <jeron.lau@plopgrizzly.com>"
]
license = "BSL-1.0"
documentation = "https://docs.rs/asi_opengl"
homepage = "https://plopgrizzly.com/asi_opengl"
repository = "https://github.com/plopgrizzly/asi_opengl"
readme = "readme.md"
description = "Rust safe bindings for OpenGL / OpenGLES."
keywords = ["opengl", "opengl-es", "opengles"]
categories = ["rendering::graphics-api", "hardware-support",
	"api-bindings", "rendering", "external-ffi-bindings"]

[dependencies]
dl_api = "0.1"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"
